--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Page Title</title>
 </head>
 <body>
+  <h1>Index.html Title</h1>
+  <p>This is the first paragraph.</p>
   <h1>This is a heading</h1>
   <p>This is a paragraph.</p>
   <p>This is a paragraph from vim.</p>
